@@ -113,13 +113,6 @@ drawAgNode <- function(node) {
   fg <- color(node)
   style <- style(node)
   shape <- shape(node)
-  border.lwd <- border.lwd(node)
-  border.color <- border.color(node)
-
-  if (border.lwd == "")
-      border.lwd <- 1
-  if (border.color == "")
-      border.color <- "black"
 
   ## Normal Rgraphviz defaults to circle, but DOT defaults to ellipse
   if (shape =="") shape <- "ellipse" 
@@ -138,7 +131,7 @@ drawAgNode <- function(node) {
          "rect"=,
          "rectangle" = rect(nodeX-lw, nodeY-(height/2), 
 			    nodeX+rw, nodeY+(height/2), 
-			    col=bg, border=border.color, lwd = border.lwd),
+			    col=bg, border=fg),
          "plaintext"= { if (style == "filled")
                           rect(nodeX-lw, nodeY-(height/2),
                                nodeX+rw, nodeY+(height/2),
